# airport_map

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .svglintrc.cjs  CNAME.example  IDEAS.md  README.md  Readme.md  airports-data.js  biome.json  deno.json  index.html  manifest.json  map.js  mise.toml  offline.html  package.json  server.ts  service-worker.js  service-worker.ts  tsconfig.json
.github/: PAGES_CONFIG.md
.github/workflows/: deploy.yml
.kiro/hooks/: code-problem-reviewer.kiro.hook
.kiro/steering/: guidelines.md  product.md  structure.md  tech.md
assets/: styles.css
data/: .gitignore  airports.json  climate.py  pyproject.toml  routes.json  run_climate.sh  ryanair.py
data/dev/: airports.json  routes.json
data/wikidata/: airports.py
front/: .bunfig.toml  .editorconfig  .gitignore  README.md  biome.json  index.html  offline.html  package.json  service-worker.ts  tsconfig.json
front/assets/: styles.css
front/src/: App.tsx  data.ts  info.ts  main.ts  map.ts  pwa.ts  types.ts  ui.ts  utils.ts
front/tests/: README.md  app.test.ts  itinerary.test.ts  utils.test.ts
jules-scratch/verification/: verify_tooltip.py
output/: Berlin-Germany-20250815T104343Z.json  Vilnius-Lithuania-20250815T105543Z.json
src/: api.js  api.ts  info.ts  main.js  main.ts  map.js  map.ts  pwa.js  pwa.ts  ui.js  ui.ts  utils.ts
tests/: README.md  utils.test.ts
travel_data/: .env.example  README.md  cli.py
travel_data/connectors/: citybikes.py  exchangerate.py  nagerdate.py  nominatim.py  open_elevation.py  open_meteo.py  openaq.py  ourairports.py  (+7 more)
(+30 files in other folders)
