[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "marimo>=0.14.16",
    "polars>=1.32.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.1",
    "ipykernel>=6.30.1",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]
